# shopify-labs

./: .gitignore  sps.py
simple-products-search-py/: README.md  pyproject.toml  sps.py
